Coursera: Disability Awareness and Support

--- a/courses.html
+++ b/courses.html
@@ -193,6 +193,12 @@
         The first run started on 5 June 2017.
       </li>
       <li>
+        <a href="https://www.coursera.org/learn/disability-awareness">Disability Awareness and Support</a>
+        is a four-week course by the University of Pittsburgh hosted on Coursera. According to the course description,
+        <q>The goal of this course is to promote equal opportunity and the full participation of students with disabilities in higher education by helping participants advance their awareness of the meaning of accessibility in education.</q>
+        The latest run started on 26 February 2018.
+      </li>
+      <li>
         <a href="https://www.udemy.com/accessibility-features-on-android/">Accessibility Features on Android</a>
         by Sami Rahman is a free course hosted on Udemy.
         It consists of 34 lectures and was last updated in September 2013.
