Perez: From Accomodation to Accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -430,6 +430,14 @@
         <a href="https://flipboard.com/@flipboard/-how-a-blind-student-who-felt-locked-out/f-880039bc41%2Fedsurge.com">How a Blind Student Who Felt Locked Out of <abbr>STEM</abbr> Classes Challenged—and Changed—Her University</a>,
         <i class="blog">Edsurge</i>, 08.12.2017.
       </li>
+      <li>Perez, Luis:
+        <a href="https://er.educause.edu/articles/2015/4/from-accommodations-to-accessibility-creating-learning-environments-that-work-for-all">From Accommodations to Accessibility: Creating Learning Environments That Work for All</a>,
+        <i class="website">Educause Review</i>, 27.04.2015. This article briefly describes the A3 Model of accesibility in education.
+        The model describes the progression of higher education institutions with regard to the inclusion of students with disabilities,
+        and consists of three phases: Advocacy, Accommodation and Accessibility.
+        The article is also available as a downloadable <abbr>PDF</abbr> file.
+        <!--Source: "" on Coursera. @@check links in footnotes!-->
+      </li>
     </ul>
 
     <h2>Projects</h2>
