Deacon: How Accessibility Saved My Professional Life

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -668,6 +668,10 @@
         <a href="https://ds.gpii.net/"><abbr>GPII</abbr> DeveloperSpace</a>:
         a <q>one-stop place to find resources, components and people to conceive, develop, test and market novel accessible solutions</q>.
       </li>
+      <li>Deacon, Dennis:
+        <a href="http://www.24a11y.com/2017/how-accessibility-saved-my-professional-life/">How Accessibility Saved My Professional Life</a>,
+        <i class="website">24 Accessibility</i>, 09.12.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
