Ratcliff: design websites for blind and partially s...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -86,6 +86,10 @@
         <a href="https://axesslab.com/practical-accessibility-improvements/">Practical Examples of Accessibility Improvements</a>,
         <i class="website">Axess Lab</i>, 28.12.2017.
       </li>
+      <li>Ratcliff, Christopher:
+        <a href="http://whatusersdo.com/blog/how-to-design-websites-for-blind-and-partially-sighted-people/">How to design websites for blind and partially sighted people</a>,
+        <i class="website">WhatUsersDo</i>, 15.08.2017.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
