Kasdorf: If Accessibility Is So Easy ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -677,6 +677,10 @@
         <a href="http://www.24a11y.com/2017/how-accessibility-saved-my-professional-life/">How Accessibility Saved My Professional Life</a>,
         <i class="website">24 Accessibility</i>, 09.12.2017.
       </li>
+      <li>Kasdorf, Bill:
+        <a href="https://inclusivepublishing.org/blog/if-accessibility-is-so-easy-now-why-is-it-still-so-hard/">If Accessibility Is So Easy Now, Why Is It Still So Hard?</a>,
+        <i class="blog">DAISY Consortium blog</i>, 01.02.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
