--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -299,6 +299,10 @@
         <a href="http://www.hellbusch.de/meine-barrierefreiheit-deine-barrierefreiheit/">Meine Barrierefreiheit, Deine Barrierefreiheit: Studie zur Wirkung von barrierefreien Webseiten auf ihre Nutzer</a>,
         24.06.2014.
       </li>
+      <li>Head, Val:
+        <a href="https://alistapart.com/article/designing-safer-web-animation-for-motion-sensitivity">Designing Safer Web Animation For Motion Sensitivity</a>,
+        <i class="website">A List Apart</i>, 08.09.2015.
+      </li>
       <li>Ratliff, Eleanor:
         <a href="https://alistapart.com/article/accessibility-whack-a-mole">Accessibility Whack-A-Mole</a>,
         <i class="website">A List Apart</i>, 06.12.2016.
