Deakin: Meet the invisible minority

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -688,6 +688,10 @@
         <a href="https://inclusivepublishing.org/blog/if-accessibility-is-so-easy-now-why-is-it-still-so-hard/">If Accessibility Is So Easy Now, Why Is It Still So Hard?</a>,
         <i class="blog">DAISY Consortium blog</i>, 01.02.2018.
       </li>
+      <li>Deakin, Wayne:
+        <a href="https://www.campaignlive.co.uk/article/meet-invisible-minority-why-autism-neurodiversity-gifts-industry/1456822">Meet the invisible minority: Why my autism and neurodiversity are gifts to the industry</a>,
+        <i class="website">Campaign (<abbr>UK</abbr>)</i>, 19.02.2018 (raeding this article requires registration).
+      </li>
       <!--
       <li>
         <a href=""></a>
