--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -692,6 +692,10 @@
         <a href="https://www.campaignlive.co.uk/article/meet-invisible-minority-why-autism-neurodiversity-gifts-industry/1456822">Meet the invisible minority: Why my autism and neurodiversity are gifts to the industry</a>,
         <i class="website">Campaign (<abbr>UK</abbr>)</i>, 19.02.2018 (raeding this article requires registration).
       </li>
+      <li>Williamson, Rachel:
+        <a href="https://medium.com/@rachel.williamson/why-arent-we-doing-this-already-what-i-ve-learned-about-accessibility-in-the-tech-industry-927a0e1d72d9">Why Aren’t We Doing This Already? : What I’ve Learned About Accessibility in the Tech Industry</a>,
+        <i class="blog">Medium</i>, 27.02.2018 (seven-minute read).
+      </li>
       <!--
       <li>
         <a href=""></a>
