--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -223,6 +223,9 @@
         <i class="website">Atalan</i>. English version:
         <a href="https://atalan.fr/agissons/en/index.html">Digital Accessibility: How We Can Help</a>.
       </li>
+      <li><a href="https://letorey.co.uk/blog/a11y-isnt-just"><abbr title="accessibility">A11y</abbr> isn't Just…</a>,
+        <i class="website">letorey.co.uk</i>, 04.03.2018.
+      </li>
     </ul>
 
     <h2>Braille</h2>
