A. F. Newell: Design and the Digital Divide.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -226,6 +226,11 @@
       <li><a href="https://letorey.co.uk/blog/a11y-isnt-just"><abbr title="accessibility">A11y</abbr> isn't Just…</a>,
         <i class="website">letorey.co.uk</i>, 04.03.2018.
       </li>
+      <li>Newell, Alan F.:
+        <i class="booktitle">Design and the Digital Divide: Insights from 40 Years in Computer Support for Older and Disabled People</i>.
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00369ED1V01Y201106ARH001">Morgan &amp; Claypool, 2011.</a> (195 pages)
+      </li>
     </ul>
 
     <h2>Braille</h2>
