Cole: Patient-Centered Design ...; Carmien.

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -148,6 +148,21 @@
         * SITPLUS: "Ludic-therapeutic activities for people with disabilities": http://sitplus.crea-si.com/ 
       -->
     </ul>
+
+    <h2>Other Links</h2>
+    <ul>
+      <li>Cole, Elliot:
+        <i class="booktitle">Patient-Centered Design of Cognitive Assistive Technology for Traumatic Brain Injury Telerehabilitation</i>.
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00478ED1V01Y201302ARH003">Morgan &amp; Claypool, March 2013</a>. (159 pages)
+      </li>
+      <li>Carmien, Stefan:
+        <i class="booktitle">Assistive Technology Design for Intelligence Augmentation</i>.
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00709ED1V01Y201603ARH010">Morgan &amp; Claypool, April 2016</a>. (171 pages)
+      </li>
+    </ul>
+
   </main>
 
   <footer>
