--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -161,6 +161,11 @@
         Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
         <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00709ED1V01Y201603ARH010">Morgan &amp; Claypool, April 2016</a>. (171 pages)
       </li>
+      <li>Rebola, Claudia B.:
+        <i class="booktitle">Designed Technologies for Healthy Aging</i>.
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00576ED1V01Y201404ARH006">Morgan &amp; Claypool, January 2015</a>. (186 pages)
+      </li>
     </ul>
 
   </main>
