Sethfors: Disabled buttons suck

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -278,6 +278,10 @@
         <a href="https://blog.atalan.fr/datepicker-et-accessibilite/" hreflang="fr" lang="fr">Datepicker et accessibilité</a>,
         <i class="blog" lang="fr">Atalan, le blog</i>, 02.01.2018.
       </li>
+      <li>Sethfors, Hampus:
+        <a href="https://axesslab.com/disabled-buttons-suck/">Disabled buttons suck</a>,
+        <i class="website">Axess Lab</i>, 07.07.2017.
+      </li>
       <li>Pickering, Heydon:
         <a href="https://inclusive-components.design/notifications/">Notifications</a>,
         <i class="website">Inclusive Components</i>, 27.02.2018.
