Kramer: primer to web accessibility for designers

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -65,6 +65,10 @@
       <li><a href="https://www.accede-web.com/" hreflang="fr" lang="fr">AcceDe Web | La démarche accessibilité</a>,
         website by the French company <i class="website">Atalan</i>.
       </li>
+      <li>Kramer, Nicholas:
+        <a href="https://uxplanet.org/a-primer-to-web-accessibility-for-designers-2c548448c612">A Primer to Web Accessibility for Designers</a>,
+        <i class="blog"><abbr>UX</abbr> Planet</i>, 10.03.2018 (10-minute read).
+      </li>
       <li>Aizpurua, Amaia; Harper, Simon; Vigo, Markel: 
         <a href="http://www.sciencedirect.com/science/article/pii/S1071581916000409">Exploring the Relationship between Web Accessibility and User Experience</a>.
         <i class="journal">International Journal of Human-Computer Studies</i>, Volume 91 (July 2016): 13–23.
