IoT for Active Aging: start 09.04.2018

--- a/courses.html
+++ b/courses.html
@@ -227,7 +227,7 @@
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
         is a 4-week course by Taipei Medical University, hosted on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 13 November;
-        the second run started on 3 April 2017. The next run has not been announced yet.
+        the second run started on 3 April 2017. The next run starts on 9 April 2018.
       </li>
     </ul>
 
