Deacon: Accessibility vs. Inclusive Design

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -747,6 +747,10 @@
         <a href="https://medium.com/@rachel.williamson/why-arent-we-doing-this-already-what-i-ve-learned-about-accessibility-in-the-tech-industry-927a0e1d72d9">Why Aren’t We Doing This Already? : What I’ve Learned About Accessibility in the Tech Industry</a>,
         <i class="blog">Medium</i>, 27.02.2018 (seven-minute read).
       </li>
+      <li>Deacon, Dennis:
+        <a href="https://www.lireo.com/accessibility-vs-inclusive-design-my-point-of-view/">Accessibility vs. Inclusive Design: My Point of View</a>,
+        <i class="website">Lireo Designs</i>, 14.02.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
