--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -198,6 +198,14 @@
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
         Article about charts in <abbr>SVG</abbr>.
       </li>
+      <li>McCathie Nevile, Chaals:
+        <a href="https://www.youtube.com/watch?v=WotJk8m4qLA"><abbr>SVG</abbr> Accessibility</a>,
+        recording of a 50-minute presentation introduced by David Sloan (The Paciello Group, 9 June 2017).
+      </li>
+      <li><abbr>SA</abbr> Team:
+        <a href="https://simplyaccessible.com/article/7-solutions-svgs/">7 solutions for creating more accessible <abbr>SVGs</abbr></a>,
+        <i class="blog">Simple Accessible blog</i>, 16.03.2017.
+      </li>
       <li>Souza, Alan:
         <a href="https://eventil.com/presentations/nWsqXQ">ReactJS: Tips and Tricks to create accessible <abbr>SVG</abbr> components</a>,
         <i class="website">Eventil</i>: video recording of a 30-minute tutorial at <abbr>JSConf</abbr> 2016.
@@ -318,14 +326,6 @@
       <li>Pickering, Heydon:
         <a href="https://inclusive-components.design/notifications/">Notifications</a>,
         <i class="website">Inclusive Components</i>, 27.02.2018.
-      </li>
-    </ul>
-
-    <h2>Scalable Vector Graphics (<abbr>SVG</abbr>)</h2>
-    <ul>
-      <li>McCathie Nevile, Chaals:
-        <a href="https://www.youtube.com/watch?v=WotJk8m4qLA"><abbr>SVG</abbr> Accessibility</a>,
-        recording of a 50-minute presentation introduced by David Sloan (The Paciello Group, 9 June 2017).
       </li>
     </ul>
 
