Lembrée: SVG, Icon Fonts, and Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -198,6 +198,10 @@
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
         Article about charts in <abbr>SVG</abbr>.
       </li>
+      <li>Lembrée, Dennis:
+        <a href="https://www.24a11y.com/2017/svg-icon-fonts-accessibility-case-study/"><abbr>SVG</abbr>, Icon Fonts, and Accessibility: A Case Study</a>,
+        <i class="blog">24 Accessibility</i>, 14.12.2017.
+      </li>
       <li>McCathie Nevile, Chaals:
         <a href="https://www.youtube.com/watch?v=WotJk8m4qLA"><abbr>SVG</abbr> Accessibility</a>,
         recording of a 50-minute presentation introduced by David Sloan (The Paciello Group, 9 June 2017).
