--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -198,6 +198,14 @@
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
         Article about charts in <abbr>SVG</abbr>.
       </li>
+      <li>Watson, Léonie:
+        <a href="https://tink.uk/accessible-svg-line-graphs/">Accessible <abbr>SVG</abbr> line graphs</a>,
+        <i class="website">Tink</i>, 09.09.2017.
+      </li>
+      <li>Watson, Léonie:
+        <a href="https://tink.uk/accessible-svg-tables/">Accessible <abbr>SVG</abbr> tables</a>,
+        <i class="website">Tink</i>, 05.08.2017.
+      </li>
       <li>Lembrée, Dennis:
         <a href="https://www.24a11y.com/2017/svg-icon-fonts-accessibility-case-study/"><abbr>SVG</abbr>, Icon Fonts, and Accessibility: A Case Study</a>,
         <i class="blog">24 Accessibility</i>, 14.12.2017.
