Migliorisi: Accessible SVG

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -198,6 +198,10 @@
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 18.11.2017.
         Article about charts in <abbr>SVG</abbr>.
       </li>
+      <li>Migliorisi, Heather:
+        <a href="https://css-tricks.com/accessible-svgs/">Accessible <abbr>SVGs</abbr></a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 06.07.2016.
+      </li>
       <li>Watson, Léonie:
         <a href="https://tink.uk/accessible-svg-line-graphs/">Accessible <abbr>SVG</abbr> line graphs</a>,
         <i class="website">Tink</i>, 09.09.2017.
