Garaventa: Creating Accessible Menus and Mege Menus

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -343,6 +343,10 @@
         <a href="https://inclusive-components.design/notifications/">Notifications</a>,
         <i class="website">Inclusive Components</i>, 27.02.2018.
       </li>
+      <li>Garaventa, Bryan:
+        <a href="https://www.levelaccess.com/challenges-mega-menus-standard-menus-make-accessible/">Creating Accessible Menus and Mega Menus</a>,
+        <i class="website">Level Access</i>, 09.02.2018.
+      </li>
     </ul>
 
 
