Raduenzel: A DIY Accessibility Blueprint

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -90,6 +90,10 @@
         <a href="http://whatusersdo.com/blog/how-to-design-websites-for-blind-and-partially-sighted-people/">How to design websites for blind and partially sighted people</a>,
         <i class="website">WhatUsersDo</i>, 15.08.2017.
       </li>
+      <li>Raduenzel, Beth:
+        <a href="https://alistapart.com/article/diy-web-accessibility-blueprint">A <abbr>DIY</abbr> Web Accessibility Blueprint</a>,
+        <i class="website">A List Apart</i>, 13.03.2018.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
