Ryerson course on advanced web accessibility

--- a/courses.html
+++ b/courses.html
@@ -103,6 +103,11 @@
 
     <h3>Web Accessibility</h3>
     <ul>
+      <li>
+        <a href="https://de.ryerson.ca/wa/advanced/">Advanced Web Accessibility Strategies and Techniques</a>
+        is a four-week course developed by the The Chang School, Ryerson University.
+        It requires five hours of study per week and start in September 2018.
+      </li>
       <li><a href="http://centreforinclusivedesign.org/professional-certificate-web-accessibility/">Professional Certificate in Web Accessibility</a>
         is a six-week course by the Centre for Inclusive Design (Australia). The course will run from 26 March to 4 May 2018
         and costs <abbr title="Australian dollar">AUD</abbr> $2,400.
@@ -175,6 +180,7 @@
         <a href="http://accessibility.mrooms.net/">The Accessibility <abbr>MOOC</abbr>: Inclusive Online Course Design</a>
         is a course that will run from 2 April to 27 April 2018.
         <!-- "designed and facilitated by University of Montana’s Aaron Page and Marlene Zentz" https://moodle.com/2017/07/06/accessibility-mooc/ -->
+        The course is hosted by Moodlerooms, Blackboard's open source division.
       </li>
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/digital-accessibility">Digital Accessibility as a Business Practice</a>
