--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -57,6 +57,10 @@
         <a href="https://www.lullabot.com/podcasts/drupalizeme-podcast/web-accessibility-with-marcy-sutton">Web Accessibility with Marcy Sutton</a>,
         <i class="website">Lullabot</i>, 05.10.2017 (podcast).
       </li>
+      <li>Kramer, Nicholas:
+        <a href="https://uxplanet.org/a-primer-to-web-accessibility-for-designers-2c548448c612">A Primer to Web Accessibility for Designers</a>,
+        <i class="blog"><abbr>UX</abbr> Planet on Medium</i>, 10.03.2018.
+      </li>
       <li>Conti, Genevieve:
         <a href="https://zapier.com/blog/accessible-web-content/">The Writer's Guide to Making Accessible Web Content</a>,
         <i class="blog">Zapier</i>, 17.05.2016.
