--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -505,9 +505,16 @@
 
     <h2>Accessibility Blogs</h2>
     <ul>
-      <li>Duggin, Alistair:
-        <a href="http://alistairduggin.co.uk/blog/accessibility-blogs/">Accessibility Blogs</a>,
-        <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012.
+      <li>
+        <a href="https://developer.paciellogroup.com/blog/">The Paciello Group blog</a>.
+        The Paciello Group is an accessibility consultancy.
+        One of its employees, 
+        <a href="http://html5doctor.com/interview-steve-faulkner-html5-editor-new-doctor/">Steve Faulkner</a>,
+        is co-editor of the <abbr>HTML</abbr>5 specification at the <abbr>W3C</abbr>.
+      </li>
+      <li>
+        <a href="https://tink.uk/">Tink</a>:
+        Léonie Watson's blog.
       </li>
       <li><a href="http://sp1ral.com/">Wendy Chisholm</a>.
         <!--@@former career at W3C; now at Microsoft; not all blog post are about accessibility-->
@@ -524,6 +531,10 @@
       <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
+      </li>
+      <li>Duggin, Alistair:
+        <a href="http://alistairduggin.co.uk/blog/accessibility-blogs/">Accessibility Blogs</a>,
+        <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012.
       </li>
     </ul>
 
