Campbell: technical guide to getting started ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -98,6 +98,14 @@
         <a href="https://alistapart.com/article/diy-web-accessibility-blueprint">A <abbr>DIY</abbr> Web Accessibility Blueprint</a>,
         <i class="website">A List Apart</i>, 13.03.2018.
       </li>
+      <li>Campbell, Ronald:
+        <a href="http://blog.usablenet.com/a-technical-guide-to-getting-started-with-web-accessibility-part-1-alternative-text">A Technical Guide to Getting Started with Web Accessibility: Part 1 (Alternative Text)</a>,
+        <i class="blog">UsableNet blog</i>, 27.07.2017.
+      </li>
+      <li>Campbell, Ronald:
+        <a href="http://blog.usablenet.com/a-technical-guide-to-getting-started-with-web-accessibility-part-2-wai-aria-landmarks">A Technical Guide to Getting Started with Web Accessibility: Part 2 (<abbr>WAI</abbr>–<abbr>ARIA</abbr> Landmarks)</a>,
+        <i class="blog">UsableNet blog</i>, 27.07.2017.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
