WebAIM blog; Humanising Technology Blog

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -513,6 +513,14 @@
         is co-editor of the <abbr>HTML</abbr>5 specification at the <abbr>W3C</abbr>.
       </li>
       <li>
+        <a href="https://webaim.org/blog/">Web<abbr>AIM</abbr> Blog</a>.
+      </li>
+      <li>Nomensa:
+        <a href="https://www.nomensa.com/blog/">Humanising Technology Blog</a>.
+        See the 
+        <a href="https://www.nomensa.com/blog/category/accessibility">category about accessibility</a>..
+      </li>
+      <li>
         <a href="https://tink.uk/">Tink</a>:
         Léonie Watson's blog.
       </li>
