Smith: Great Accessibility Blog Roundup

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -542,7 +542,12 @@
       </li>
       <li>Duggin, Alistair:
         <a href="http://alistairduggin.co.uk/blog/accessibility-blogs/">Accessibility Blogs</a>,
-        <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012.
+        <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012:
+        list of accessibility blogs, some of which have disappeared by now.
+      </li>
+      <li>Smith, Jared:
+        <a href="https://webaim.org/blog/blog-roundup/">The Great Accessibility Blog Roundup</a>,
+        <i class="blog">Web<abbr>AIM</abbr> Blog</i>, 14.05.2007.
       </li>
     </ul>
 
