Simply Accessible (blog)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -524,13 +524,16 @@
         <a href="https://tink.uk/">Tink</a>:
         Léonie Watson's blog.
       </li>
+      <li>
+        <a href="http://simplyaccessible.com/articles/">Simply Accessible: Articles</a>.
+      </li>
       <li><a href="http://sp1ral.com/">Wendy Chisholm</a>.
         <!--@@former career at W3C; now at Microsoft; not all blog post are about accessibility-->
         Until 2009, this blog was maintained on
         <a href="http://wendychisholm.blogspot.de/">blogspot</a>.
       </li>
       <li><a href="http://access4all.ch/blog/" hreflang="de" lang="de">Access-for-all-Blog</a>:
-        blog maintained by members of the Swiss foundation Access-for-all. 
+        blog maintained by members of the Swiss foundation <span lang="de">Zugang für alle</span> or Access-for-all. 
         All blog posts are in German.
       </li>
       <li><a href="http://universalaccess.blogspot.de/" hreflang="pt">UniversalAccess</a>:
