Web Standards Sherpa

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -540,6 +540,11 @@
         blog by Jorge Fernandes, in Portuguese.
       </li>
       <li>
+        <a href="https://webstandardssherpa.com/">Web Standards Sherpa</a>
+        is a web development blog that also has articles on
+        <a href="https://webstandardssherpa.com/topics/accessibility.html">accessibility</a>.
+      </li>
+      <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
