--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -295,6 +295,7 @@
       * European Commission: European Accessibility Act: http://ec.europa.eu/social/main.jsp?catId=1202 
       * United Nations: Convention on the Rights of Persons with Disabilities (CRPD): https://www.un.org/development/desa/disabilities/convention-on-the-rights-of-persons-with-disabilities.html
     -->
+    <h4>European Web Accessibility Directive</h4>
     <ul>
       <li>European Union:
         <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32016L2102">Directive (<abbr>EU</abbr>) 2016/2102</a>:
@@ -302,24 +303,6 @@
         (This is the &ldquo;Web Accessibility Directive&rdquo;.
         <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016L2102">Directive (<abbr>EU</abbr>) 2016/2102 of the European Parliament and of the Council of 26 October 2016 on the accessibility of the websites and mobile applications of public sector bodies</a>:
         version without the language picker.)
-      </li>
-      <li>European Commission:
-        <a href="http://ec.europa.eu/social/main.jsp?catId=1202">European Accessibility Act</a>.
-        (This is a webpage about the act.)
-        <!--@@PDF-->
-      </li>
-      <li>European Commission:
-        <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=COM:2015:0615:FIN">Proposal for a DIRECTIVE OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL on the approximation of the laws, regulations and administrative provisions of the Member States as regards the accessibility requirements for products and services</a>
-        (COM/2015/0615 final - 2015/0278 (<abbr>COD</abbr>)).
-      </li>
-      <li lang="nl">Simons, Bart:
-        <a href="http://www.anysurfer.be/nl/blog/detail/europese-richtlijn-wie-doet-wat">Europese richtlijn: wie doet wat?</a>,
-        <i class="blog">AnySurfer blog</i>, 31.01.2017.
-      </li>
-      <li><abbr title="European Blind Union">EBU</abbr>:
-        <a href="http://www.euroblind.org/newsletter/2017/july-september/newsletter/online/de/newsletter/eu-update/nr/3338/">Europäisches Barrierefreiheitsgesetz: Abstimmung im Plenum des <abbr>EU</abbr>-Parlaments in erster Lesung</a>,
-        <i class="magazine"><abbr>EBU</abbr> Newsletter</i>,  July–September 2017.
-        <!--@@PDF-->
       </li>
       <li>Sethfors, Hampus:
         <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
@@ -333,13 +316,35 @@
         <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
         <i class="website">Axess Lab</i>, 27.09.2017.
       </li>
-      <li>Aalen, Ida:
-        <a href="https://medium.com/confrere/its-illegal-to-have-an-inaccessible-website-in-norway-and-that-s-good-news-for-all-of-us-b59a9e929d54">It’s illegal to have an inaccessible website in Norway — and that’s good news for all of us</a>,
-        <i class="blog">Confrere on Medium</i>, 17.02.2018.
+    </ul>
+
+    <h4>European Accessibility Act</h4>
+    <ul>
+      <li>European Commission:
+        <a href="http://ec.europa.eu/social/main.jsp?catId=1202">European Accessibility Act</a>.
+        (This is a webpage about the act.)
+        <!--@@PDF-->
+      </li>
+      <li><abbr title="European Blind Union">EBU</abbr>:
+        <a href="http://www.euroblind.org/newsletter/2017/july-september/newsletter/online/de/newsletter/eu-update/nr/3338/">Europäisches Barrierefreiheitsgesetz: Abstimmung im Plenum des <abbr>EU</abbr>-Parlaments in erster Lesung</a>,
+        <i class="magazine"><abbr>EBU</abbr> Newsletter</i>,  July–September 2017.
+        <!--@@PDF-->
       </li>
       <li lang="de">Hellbusch, Jan:
         <a href="https://www.hellbusch.de/european-accessibility-act/" hreflang="de"><span lang="en">European Accessibility Act</span>. Ab dem 1. März 2018 wird wieder offiziell darüber verhandelt</a>,
         28.02.2018.
+      </li>
+      <li>European Commission:
+        <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=COM:2015:0615:FIN">Proposal for a DIRECTIVE OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL on the approximation of the laws, regulations and administrative provisions of the Member States as regards the accessibility requirements for products and services</a>
+        (COM/2015/0615 final - 2015/0278 (<abbr>COD</abbr>)).
+      </li>
+      <li lang="nl">Simons, Bart:
+        <a href="http://www.anysurfer.be/nl/blog/detail/europese-richtlijn-wie-doet-wat">Europese richtlijn: wie doet wat?</a>,
+        <i class="blog">AnySurfer blog</i>, 31.01.2017.
+      </li>
+      <li>Aalen, Ida:
+        <a href="https://medium.com/confrere/its-illegal-to-have-an-inaccessible-website-in-norway-and-that-s-good-news-for-all-of-us-b59a9e929d54">It’s illegal to have an inaccessible website in Norway — and that’s good news for all of us</a>,
+        <i class="blog">Confrere on Medium</i>, 17.02.2018.
       </li>
     </ul>
 
