+h4: Other Policies in Europe

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -334,6 +334,10 @@
         <a href="https://www.hellbusch.de/european-accessibility-act/" hreflang="de"><span lang="en">European Accessibility Act</span>. Ab dem 1. März 2018 wird wieder offiziell darüber verhandelt</a>,
         28.02.2018.
       </li>
+    </ul>
+
+    <h4>Other Policies in Europe</h4>
+    <ul>
       <li>European Commission:
         <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=COM:2015:0615:FIN">Proposal for a DIRECTIVE OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL on the approximation of the laws, regulations and administrative provisions of the Member States as regards the accessibility requirements for products and services</a>
         (COM/2015/0615 final - 2015/0278 (<abbr>COD</abbr>)).
