Nielsen on breadcrumb navigation (2007)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -275,6 +275,10 @@
         <a href="http://www.heydonworks.com/article/the-accessible-current-page-link-conundrum">The Accessible Current Page Link Conundrum</a>,
         <i class="website">HeydonWorks</i>, 14.02.2014.
       </li>
+      <li>Nielsen, Jakob:
+        <a href="https://www.nngroup.com/articles/breadcrumb-navigation-useful/">Breadcrumb Navigation Increasingly Useful</a>,
+        <i class="website">Nielsen Norman Group</i>, 10.04.2007.
+      </li>                          
     </ul>
 
     <h2>Form Accessibility</h2>
