--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -196,6 +196,10 @@
         demonstration of how to use aXe to run web accessibility tests in Java projects.
         Licence: <span lang="en-US">Mozilla Publice License 2.0</span>.
       </li>
+      <li>Sutton, Marcy:
+        <a href="https://www.deque.com/blog/axe-3-0-has-arrived/">Axe 3.0 has arrived — here’s what you need to know</a>,
+        <i class="blog">Deque blog</i>, 21.03.2018.
+      </li>
       <li><a href="https://www.totalvalidator.com/">Total Validator</a>:
         tool that performs several types of checks:
         <abbr>HTML</abbr> validation, validation against <abbr>WCAG</abbr> and the <abbr>US</abbr> Section 508 requirements,
