O'Reilly: Customize your browser's zoom option

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -151,7 +151,12 @@
     <h2>Other Links</h2>
     <ul>
       <li><a href="http://ask.metafilter.com/277495/Computing-hacks-for-migraine-sufferers">Computing hacks for migraine sufferers</a>,
-      <i class="website">AskMetaFilter</i>, 19.03.2015.
+        <i class="website">AskMetaFilter</i>, 19.03.2015.
+      </li>
+      <li>O'Reilly, Dennis:
+        <a href="https://www.cnet.com/news/customize-your-browsers-zoom-options/">Customize your browser's zoom options</a>,
+        <i class="website">CNET</i>, 08.01.2010.
+        Since this article dates from 2010, it is mostly of historical interest.
       </li>
     </ul>
   </main>
