Able to Include (EU project)

--- a/index.html
+++ b/index.html
@@ -116,11 +116,16 @@
         However, more importantly, the 
         <strong>search form</strong> helps you find accessibility-related
         resources on the Web.
-      <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
+        <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
+      </li>
+      <li><a href="http://able-to-include.com/">Able to Include</a>:
+        <q>Using assistive technology to help people with intellectual disabilities use social media.</q>
+        See also the <a href="https://github.com/able-to-include" title="Able to Include on GitHub">project's GitHub repositories</a>.
+        <!--@@check reports/documents-->
       </li>
       <li>
         <a href="https://www.w3.org/WAI/DEV/"><abbr title="Web Accessibility Initiative">WAI</abbr>-DEV Project</a>
-        (April 2014 - March 2016)<!-- (March 2016?) @@check deliverables!! -->
+        (April 2014 – March 2016)<!--(March 2016?) @@check deliverables!!-->
       </li>
       <li>
         <a href="http://www.funka.com/en/projekt/compare/">COMPARE</a>
