WCAG 2.1: coga experimental code

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -161,6 +161,17 @@
           <li>Garaventa, Bryan:
             <a href="https://www.levelaccess.com/differences-aria-1-0-1-1-changes-rolecombobox/">Differences between <abbr>ARIA</abbr> 1.0 and 1.1: Changes to role=&quot;combobox&quot;</a>,
             <i class="website">Level Access</i>, 27.01.2017.
+          </li>
+          <li>Experimental code relate to personalised accessibility for cognitive impairments:
+            <ul>
+              <li><abbr>W3C</abbr> Cognitive Accessibility Task Force:
+                <a href="https://www.w3.org/WAI/PF/cognitive-a11y-tf/wiki/Easy_Personalization">Easy Personalization</a>.
+              </li>
+              <li>
+                <a href="https://github.com/ayelet-seeman/coga.personalisation">coga.personalisation</a> on GitHub.
+              </li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
