+h3: Web Development for Mobile Devices

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -129,6 +129,19 @@
       </li>
     </ul>
 
+    <h3>Web Development for Mobile Devices</h3>
+    <ul>
+      <li>Cullipher, Vivian:
+        <a href="https://www.microassist.com/digital-accessibility/why-make-your-mobile-website-accessible/">3 Important Reasons to Make Your Mobile Website Accessible</a>,
+        <i class="website">Microassist Digital Accessibility Digest</i>, 25.01.2018.
+      </li>
+      <li>Bailey, Eric:
+        <a href="https://css-tricks.com/introduction-reduced-motion-media-query/">An Introduction to the Reduced Motion Media Query</a>,
+        <i class="website"><abbr>CSS</abbr>-Tricks</i>, 10.02.2017.
+      </li>
+      <!-- https://twitter.com/search?q=mobile%20web%20accessibility&src=typd -->
+    </ul>
+
     <h3>Finding Accessible Apps and Devices</h3>
     <ul>
       <li><a href="http://www.gari.info/">Global Accessibility Reporting Initiative 
