Barclays: Inclusive Design

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -152,6 +152,9 @@
         under Creative Commons BY-NC-SA license.
         <!-- @@get posters!! -->
       </li>
+      <li>Barclays:
+        <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Inclusive Design</a>.
+      </li>
       <li>Coady, Geri:
         <a href="https://24ways.org/2012/colour-accessibility/">Colour Accessibility</a>,
         <i class="website">24 Way to Impress Your Friends</i>, 04.12.2012.
