Accessible Culture (blog)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -557,6 +557,10 @@
         <a href="https://webstandardssherpa.com/topics/accessibility.html">accessibility</a>.
       </li>
       <li>
+        <a href="http://accessibleculture.org/articles/">Accessible Culture</a>:
+        blog by Jason Kiss; dormant since 2013.
+      </li>
+      <li>
         <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
         blog about the German accessibility that ran until February 2017.
       </li>
