Averitt: Accessibility for Mobile Web

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -139,6 +139,10 @@
         <a href="https://css-tricks.com/introduction-reduced-motion-media-query/">An Introduction to the Reduced Motion Media Query</a>,
         <i class="website"><abbr>CSS</abbr>-Tricks</i>, 10.02.2017.
       </li>
+      <li>Averitt, C.B.:
+        <a href="https://www.deque.com/blog/accessibility-mobile-web-improving-color-contrast/">Accessibility for Mobile Web: Improving Color Contrast</a>,
+        <i class="blog">Deque Blog</i>, 06.02.2018.
+      </li>
       <!-- https://twitter.com/search?q=mobile%20web%20accessibility&src=typd -->
     </ul>
 
