--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -319,6 +319,10 @@
         <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
         <i class="website">Axess Lab</i>, 27.09.2017.
       </li>
+      <li><a href="http://www.edf-feph.org/newsroom/news/edf-toolkit-web-accessibility-directive"><abbr>EDF</abbr> toolkit on the Web Accessibility Directive</a>,
+        <i class="website">European Disability Forum (<abbr>EDF</abbr>)</i>, 11.05.2017.
+        <!--@@downloadable PDF-->
+      </li>
     </ul>
 
     <h4>European Accessibility Act</h4>
