BOIA: 4 Accessibility Tips for Web Developers

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -106,6 +106,10 @@
         <a href="http://blog.usablenet.com/a-technical-guide-to-getting-started-with-web-accessibility-part-2-wai-aria-landmarks">A Technical Guide to Getting Started with Web Accessibility: Part 2 (<abbr>WAI</abbr>–<abbr>ARIA</abbr> Landmarks)</a>,
         <i class="blog">UsableNet blog</i>, 27.07.2017.
       </li>
+      <li>
+        <a href="https://www.boia.org/blog/4-accessibility-tips-for-web-developers">4 Accessibility Tips for Web Developers</a>,
+        <i class="website">Bureau of Internet Accessibility</i>, 27.03.2018.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
