Meiert: breadcrumbs in HTML

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -283,6 +283,10 @@
         <a href="https://www.nngroup.com/articles/breadcrumb-navigation-useful/">Breadcrumb Navigation Increasingly Useful</a>,
         <i class="website">Nielsen Norman Group</i>, 10.04.2007.
       </li>                          
+      <li>Meiert, Jens:
+        <a href="https://meiert.com/en/blog/breadcrumbs-in-html/">The Curious Case of Breadcrumbs in <abbr>HTML</abbr></a>,
+        <i class="blog">Meiert.com</i>, 03.10.2013, revised 12.12.2016.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
