Lindberg: Inclusive Design

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -226,6 +226,10 @@
         <a href="https://seesparkbox.com/foundry/accessible_by_design">Accessible By Design</a>,
         <i class="website">Sparkbox</i>, 19.02.2018.
       </li>
+      <li>Lindberg, Oliver:
+        <a href="https://www.shopify.co.uk/partners/blog/inclusive-design">Inclusive Design: 12 Ways to Design for Everyone</a>,
+        <i class="blog">Shopify Partners blog</i>, 23.03.2018 (nine-minute read).
+      </li>
       <li><a href="https://atalan.fr/agissons/fr/index.html" hreflang="fr" lang="fr">>L’accessibilité numérique, et si nous agissions&nbsp;?</ul>,
         <i class="website">Atalan</i>. English version:
         <a href="https://atalan.fr/agissons/en/index.html">Digital Accessibility: How We Can Help</a>.
