EU: Top 25 ICT for active and healthy ageing

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -365,6 +365,11 @@
         <a href="https://medium.com/confrere/its-illegal-to-have-an-inaccessible-website-in-norway-and-that-s-good-news-for-all-of-us-b59a9e929d54">It’s illegal to have an inaccessible website in Norway — and that’s good news for all of us</a>,
         <i class="blog">Confrere on Medium</i>, 17.02.2018.
       </li>
+      <li>
+        <a href="https://ec.europa.eu/digital-single-market/en/news/top-25-influential-ict-active-and-healthy-ageing-projects">Top 25 influential ICT for Active and Healthy Ageing projects</a>,
+        <i class="website">European Commission: Digital Single Market</i>, 21.03.2018.
+        <!--@@check study-->
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
