Michalopoulos: European a11y act not future-proof...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -353,6 +353,10 @@
         <a href="https://www.euractiv.com/section/public-transport-accessibility/interview/fri-public-transport-bosses-eu-accessibility-act-focuses-too-much-on-ticket-machines/">Public transport bosses: <abbr>EU</abbr> Accessibility Act focuses too much on ticket machines</a>,
         <i class="website">Euractiv</i>, 19.05.2017.
       </li>
+      <li>Michalopoulos, Sarantis:
+        <a href="https://www.euractiv.com/section/health-consumers/news/european-accessibility-act-not-future-proof-enough/">European Accessibility Act ‘not future-proof enough’</a>,
+        <i class="website">Euractiv</i>, 06.12.2016.
+      </li>
     </ul>
 
     <h4>Other Policies in Europe</h4>
