--- a/GUIAccessibilityResources.html
+++ b/GUIAccessibilityResources.html
@@ -142,6 +142,14 @@
       "<a href="https://www.wxwidgets.org/docs/tutorials/accessibility/">Accessibility in wxWidgets</a>" 
       (February 2003).
     </p>
+
+    <h2>General Guidelines</h2>
+    <ul>
+    <li>Hinton, Suz:
+      <a href="https://increment.com/development/a-guide-to-coding-accessible-developer-tools/">A guide to coding accessible developer tools</a>,
+      <i class="magazine">Increment</i>, Issue 3, Fall 2017.
+    </li>
+    </ul>
   </main>
 
   <footer>
