--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -575,7 +575,7 @@
       <code>chrome://accessibility</code> into the <abbr>URL</abbr> bar.
       This also works in <a href="https://en.wikipedia.org/wiki/Comodo_Dragon">Comodo Dragon</a>, which is based on Chrome.
     </li>
-    <li>The Chromium Projects: 
+    <li>The Chromium Project: 
       <a href="https://www.chromium.org/developers/design-documents/accessibility">Accessibility Technical Documentation</a>.
     </li>
   </ul>
