Foliot: Not the Blog Post I Was Going to Write ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -339,6 +339,10 @@
         (Decaptcha) but gave accessibility advocates the argument that <abbr>CAPTCHA</abbr>s will turn out to be better at
         keeping out people with disabilities than at keeping out spam bots.
       </li>
+      <li>Foliot, John:
+        <a href="http://john.foliot.ca/not-the-blog-post-i-was-going-to-write-today/">Not The Blog Post I Was Going To Write Today</a>,
+        <i class="blog">Unrepentant</i>, 05.11.2011. (Licence: <abbr lang="en-US" title="Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License">CC-BY-NC-SA</abbr>.)
+      </li>
       <!--
       <li>
         <a href=""></a>
