EU a11y act: special report

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -361,6 +361,10 @@
         <a href="https://www.euractiv.com/section/health-consumers/news/european-accessibility-act-not-future-proof-enough/">European Accessibility Act ‘not future-proof enough’</a>,
         <i class="website">Euractiv</i>, 06.12.2016.
       </li>
+      <li>
+        <a href="https://www.euractiv.com/section/health-consumers/special_report/european-accessibility-act/">European Accessibility Act (Special Report)</a>,
+        <i class="website">Euractiv</i>, 05.12.2016, updated 14.12.2016.
+      </li>
     </ul>
 
     <h4>Other Policies in Europe</h4>
