Bailey: Focusing on Focus Styles

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -287,6 +287,10 @@
         <a href="https://meiert.com/en/blog/breadcrumbs-in-html/">The Curious Case of Breadcrumbs in <abbr>HTML</abbr></a>,
         <i class="blog">Meiert.com</i>, 03.10.2013, revised 12.12.2016.
       </li>
+      <li>Bailey, Eric:
+        <a href="https://css-tricks.com/focusing-on-focus-styles/">Focusing on Focus Styles</a>,
+        <i class="websites"><abbr>CSS</abbr>-Tricks</i>, 29.03.2018.
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
