--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -153,6 +153,10 @@
         <q>a collection modern TypeScript based true Angular Components</q>.
         The documentation has a section on <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/base/accessibility.html">Accessibility</a>.
       </li>
+      <li>Adobe Accessibility:
+        <a href="https://github.com/adobe-accessibility/Accessible-Mega-Menu/">Accessible Mega Menu</a>:
+        available on GitHub; Apache 2.0 licence.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
