Christopherson: Why are disabled people treated ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -347,6 +347,11 @@
         <a href="http://john.foliot.ca/not-the-blog-post-i-was-going-to-write-today/">Not The Blog Post I Was Going To Write Today</a>,
         <i class="blog">Unrepentant</i>, 05.11.2011. (Licence: <abbr lang="en-US" title="Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License">CC-BY-NC-SA</abbr>.)
       </li>
+      <li>Christopherson, Robin:
+        <a href="https://www.abilitynet.org.uk/news/why-are-disabled-people-treated-spammers">Why are disabled people treated like spammers?</a>,
+        <i class="website">UsabilityNet</i>, 08.10.2012.
+        <!--@@site has contrast switcher-->
+      </li>
       <!--
       <li>
         <a href=""></a>
