Moledo: EU a11act: a push for accessible publications

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -373,6 +373,10 @@
         <a href="https://www.euractiv.com/section/health-consumers/special_report/european-accessibility-act/">European Accessibility Act (Special Report)</a>,
         <i class="website">Euractiv</i>, 05.12.2016, updated 14.12.2016.
       </li>
+      <li>Moledo, Alejandro:
+        <a href="https://inclusivepublishing.org/blog/the-european-accessibility-act-a-push-for-accessible-publications/">The European Accessibility Act: A Push for Accessible Publications</a>,
+        <i class="blog">Inclusive Publishing blog</i>, 28.03.2018.
+      </li>
     </ul>
 
     <h4>Other Policies in Europe</h4>
