Berger: How we stopped making excuses

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -844,6 +844,10 @@
         <a href="https://www.lireo.com/accessibility-vs-inclusive-design-my-point-of-view/">Accessibility vs. Inclusive Design: My Point of View</a>,
         <i class="website">Lireo Designs</i>, 14.02.2018.
       </li>
+      <li>Berger, Michael:
+        <a href="https://m.signalvnoise.com/how-we-stopped-making-excuses-and-started-improving-basecamps-accessibility-5f45eb246aa3">How we stopped making excuses and started improving Basecamp’s accessibility</a>,
+        <i class="blog">Signal v. Noise (on Medium)</i>, 14.03.2018 (five-minute read).
+      </li>
       <!--
       <li>
         <a href=""></a>
