Blind Computer Games (website)

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -149,6 +149,10 @@
       <li><a href="http://ian-hamilton.com/blog/">Ian Hamilton's blog</a>
         is mostly about game accessibility.
       </li>
+      <li><a href="http://blindcomputergames.com/index.html">Blind Computer Games</a>:
+        a website with guidelines, how-to information and examples, such as
+        <a href="http://blindcomputergames.com/howto/howto-self-voicing-design.html">Designing Games for Self Voicing</a>.
+      </li>
       <li>Josh Straub:
         <a href="https://dagersystem.com/all-review-list/disability-game-review-assassins-creed-origins/">Disability Game Review: Assassin’s Creed Origins</a>,
         <i class="website">Dager System</i>, 08.12.2017.
