The Blind Blogger

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -589,6 +589,9 @@
         Until 2009, this blog was maintained on
         <a href="http://wendychisholm.blogspot.de/">blogspot</a>.
       </li>
+      <li><a href="http://theblindblogger.blogspot.be/">The Blind Blogger</a>:
+        blog by a certain Roger WH.
+      </li>
       <li><a href="http://access4all.ch/blog/" hreflang="de" lang="de">Access-for-all-Blog</a>:
         blog maintained by members of the Swiss foundation <span lang="de">Zugang für alle</span> or Access-for-all. 
         All blog posts are in German.
