BOIA: Accessibility Analysis of Banking Industry ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -851,6 +851,10 @@
         <a href="https://m.signalvnoise.com/how-we-stopped-making-excuses-and-started-improving-basecamps-accessibility-5f45eb246aa3">How we stopped making excuses and started improving Basecamp’s accessibility</a>,
         <i class="blog">Signal v. Noise (on Medium)</i>, 14.03.2018 (five-minute read).
       </li>
+      <li>
+        <a href="https://www.boia.org/blog/accessibility-analysis-of-banking-industry-websites-1q2018">Accessibility Analysis of Banking Industry Websites - 1Q2018</a>,
+        <i class="website">Bureau of Internet Accessibility</i>, 14.03.2018.
+      </li>
       <!--
       <li>
         <a href=""></a>
