Novak: Going Colorblind

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -855,6 +855,10 @@
         <a href="https://www.boia.org/blog/accessibility-analysis-of-banking-industry-websites-1q2018">Accessibility Analysis of Banking Industry Websites - 1Q2018</a>,
         <i class="website">Bureau of Internet Accessibility</i>, 14.03.2018.
       </li>
+      <li>Novak, Sara:
+        <a href="https://blog.prototypr.io/going-colorblind-an-experiment-in-empathy-and-accessibility-98b7003737ca">Going Colorblind: An Experiment in Empathy and Accessibility</a>,
+        <i class="blog">Prototypr on Medium</i>, 02.04.2018 (seven-minute read).
+      </li>
       <!--
       <li>
         <a href=""></a>
